--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
    
    </script>
     </div>
-   <p id="outro"> Thanks for playing! <a href= "https://trek-cr3.github.io/numberTrickEnhanced/">Click Here to Play Again</a></p>   
+   <p id="outro"><a href= "https://trek-cr3.github.io/numberTrickEnhanced/">Click Here to Play Again</a></p>   
     
 </body>
 </html>
